...
            android:visibility="gone"
            android:scaleType="fitCenter"
            android:onClick="onClickTopBar"
            />

        <ImageView
            android:id="@+id/makePhoto"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/camera"
            android:scaleType="fitCenter"
            android:onClick="onClickTopBar"
            android:background="#00000000"
            />

        <ImageView
            android:id="@+id/openGallery"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/clip"
            android:scaleType="fitCenter"
            android:onClick="onClickTopBar"
            />
...
